made story whole chat channel

--- a/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
+++ b/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
@@ -1,6 +1,7 @@
 .private-chat-text-input {
   .header-collapsible {
     cursor: pointer;
+    color: #fff;
   }
   .icon-paperclip {
     margin-right: 10px;
