--- a/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
@@ -10,6 +10,7 @@
   border-left-width: 8px;
   display: flex;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 .chat-messgae-bubble-sent {
   border-left-width: 0;
