set multiline false

--- a/packages/components/src/local/molecules/write-message-panel/styles.module.scss
+++ b/packages/components/src/local/molecules/write-message-panel/styles.module.scss
@@ -1,8 +1,8 @@
 .write-message-panel {
   position: relative;
   padding: 10px;
-  background-color: #00274B;
-  border-radius: 5px 5px 0px 0px;
+  background-color: #00274b;
+  border-radius: 5px 5px 0 0;
   .private-chat-text-block {
     padding-top: 13px;
   }
