--- a/packages/components/src/local/molecules/statusbar/styles.module.scss
+++ b/packages/components/src/local/molecules/statusbar/styles.module.scss
@@ -1,3 +1,5 @@
+@import "~@serge/themes/dependencies/variables";
+
 .main {
   display: flex;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -12,6 +14,7 @@
 }
 
 .status {
+  color: $secondary-color;
   font-size: 1rem;
 }
 
