--- a/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
@@ -24,8 +24,28 @@
     border-radius: 5px 0 0 5px;
   }
 }
+.badges-box {
+  margin-top: 10px;
+}
 .chat-inner-bubble {
   max-width: 60%;
+}
+.private-message {
+  margin-top: -20px;
+}
+.icon-private {
+  color: #434343;
+  margin-right: 7px;
+}
+.private-message-text {
+  color: #434343;
+}
+.private-message-box {
+  padding: 9px;
+  background-color: #fff;
+  border-radius: 5px;
+  margin-top: 6px;
+  min-height: 45px;
 }
 
 .message-title-wrap {
