--- a/packages/components/src/local/molecules/chat-channel-message/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-channel-message/styles.module.scss
@@ -1,1 +1,15 @@
 @import "~@serge/themes/dependencies/variables";
+
+.chat-bubble-grid{
+    position: absolute;
+    width: 100%;
+    overflow: scroll;
+    height: 78vh;
+}
+
+.chat-input-grid{
+    position: fixed;
+    width: 75.3%;
+    bottom: 0;
+    padding-bottom: 0;
+}
