--- a/packages/components/src/local/atoms/input-container/styles.module.scss
+++ b/packages/components/src/local/atoms/input-container/styles.module.scss
@@ -1,6 +1,6 @@
 @import "~@serge/themes/dependencies/variables";
 .input-container {
-  padding: 1rem;
+  padding-bottom: 0.5rem;
 
   .input-label {
     @include typo-primary;
