--- a/packages/components/src/local/form-elements/form-group/styles.module.scss
+++ b/packages/components/src/local/form-elements/form-group/styles.module.scss
@@ -22,7 +22,7 @@
 }
 
 .main-container {
-  padding: 0.625rem 0.625rem 0.625rem 0;
+  padding: 0;
   display: flex;
   align-items: center;
   min-height: 44px;
