--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -52,28 +52,47 @@
 .toggle {
   z-index: 1010;
   cursor: pointer;
-  background-color: #1a394d;
   color: #fff;
   width: 21px;
-  height: 71px;
+  height: 80px;
   position: absolute;
-  top: 72px;
   right: -20px;
-  border-radius: 0 5px 5px 0;
+  border-radius: 0 8px 8px 0;
 
   svg {
     display: none;
-    margin-top: 20px;
-    height: 34px;
+    margin-top: 0;
+    height: 20px;
     width: 30px;
     margin-left: -5px;
     transition: transform 0.5s ease-in-out;
   }
 }
 
-.toggle:first-child {
+.toggle-active .rotated {
+  margin-top: 0;
+}
+
+.rotated {
+  margin-top: 20px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-size: 12px;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+}
+
+.control {
   top: 0;
   background-color: #54667c;
+}
+.visibility {
+  top: 80px;
+  background-color: #1a394d;
+}
+.controlled {
+  top: 160px;
+  background-color: #000;
+  color: #fff;
 }
 
 .toggle-active {
