--- a/packages/components/src/local/atoms/admin-content/styles.module.scss
+++ b/packages/components/src/local/atoms/admin-content/styles.module.scss
@@ -10,7 +10,11 @@
   height: 100%;
   overflow-y: auto;
   border-right: 2px solid #bebebe;
-  padding: 20px 0;
+  padding: 20px;
+
+  :global(.searchlist-list) {
+    max-height: none;
+  }
 }
 .right {
   flex: 1;
