--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -596,7 +596,7 @@
     margin-bottom: 18px;
   }
 
-  select.message-input:first-child {
+  .message-input:first-child {
     margin-top: 18px;
   }
 
