--- a/packages/components/src/local/organisms/admin-login/styles.module.scss
+++ b/packages/components/src/local/organisms/admin-login/styles.module.scss
@@ -1,9 +1,9 @@
 @import "~@serge/themes/dependencies/variables";
 
 .login-form-head {
-  color: #ffffff;
+  @include typo-primary;
+  color: #fff;
   font-weight: 500;
   font-size: 2rem;
   margin-bottom: 1em;
-  @include typo-primary;
 }
