PArtially implemented visibility form

--- a/packages/components/src/local/form/styles.module.scss
+++ b/packages/components/src/local/form/styles.module.scss
@@ -19,6 +19,9 @@
 .adjudication {
   background-color: #fafad2;
 }
+.visibility {
+  background-color: #54667c;
+}
 
 .perceived-as {
   background-color: #1a394d;
