--- a/packages/components/src/local/visibility-form/styles.module.scss
+++ b/packages/components/src/local/visibility-form/styles.module.scss
@@ -11,40 +11,17 @@
   }
 }
 
-.select {
-  width: 180px;
+h2 {
+  @include typo-primary;
+  font-size: 0.8rem;
+  font-weight: 700;
+  color: #fff;
+  text-transform: uppercase;
+  padding-left: 1vmin;
+  padding-right: 1vmin;
 }
 
-.input-container {
-  display: flex;
-  background-color: #565656;
-  align-items: baseline;
-  justify-content: space-around;
-  padding: inherit;
-  border-radius: 1vmin;
-  margin-top: 1vmin;
-
-  h2 {
-    @include typo-primary;
-    font-size: 0.8rem;
-    font-weight: 700;
-    color: #fff;
-    text-transform: uppercase;
-    padding-left: 1vmin;
-    padding-right: 1vmin;
-  }
-
-  div::before,
-  * > div::before {
-    border-bottom-color: #fff !important;
-  }
-
-  > div {
-    max-width: 180px;
-  }
-}
-
-.form-header {
+.form-headr {
   @include typo-primary;
   display: inline-block;
   font-weight: 700;
@@ -60,32 +37,18 @@
   padding: 2px 8px !important;
 }
 
-.asset-icon {
-  position: absolute;
-  border-radius: 100%;
-  background-repeat: no-repeat;
-  background-position: 50%;
-  background-size: 80%;
-  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
-  border: 1px solid hsla(0, 0%, 100%, 0.6);
-  width: 40px;
-  height: 40px;
-  margin-top: 0.8px;
-  top: 10px;
-  right: 20px;
-  &.selected {
-    border: 4px solid rgba(255, 255, 255, 0.7);
+.visibility {
+  padding: 10px;
+  background: $background-field;
+  color: #fff;
+
+  fieldset {
+    border: 0;
+    padding: 0;
   }
-}
 
-.blue {
-  background-color: #000fff;
-}
-
-.red {
-  background-color: #ff0b00;
-}
-
-.green {
-  background-color: #19bd37;
+  // put space between action buttons
+  button + button {
+    margin-left: 1rem;
+  }
 }
