--- a/packages/components/src/local/molecules/chat-messages-list/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-messages-list/styles.module.scss
@@ -1,7 +1,8 @@
 .chat-bubble-grid {
   // position: absolute;
   width: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   height: 78vh;
 }
 
