comment css issue

--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -596,9 +596,11 @@
     margin-bottom: 18px;
   }
 
+  /* 599:24  ×  Unexpected qualifying type selector   selector-no-qualifying-type
   select.message-input:first-child {
     margin-top: 18px;
   }
+  */
 
   .btn {
     float: right;
