css linter fixes

--- a/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
@@ -37,13 +37,13 @@
   margin-top: -21px;
 }
 .icon-private {
-  color: black;
+  color: #000;
   margin-right: 7px;
 }
 .private-message-text {
-  color: white;
+  color: #fff;
   font-size: 13px;
-  background: black;
+  background: #000;
   padding: 2px 6px;
   border-radius: 6px;
 }
