--- a/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-message-bubble/styles.module.scss
@@ -8,7 +8,7 @@
 .chat-messgae-bubble {
   border-left-style: solid;
   border-left-width: 8px;
-  display: flex;
+  //display: flex;
   border-radius: 5px;
   margin-bottom: 10px;
 }
