--- a/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
+++ b/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
@@ -25,3 +25,10 @@
     border-radius: 4px;
   }
 }
+.header-collapsible svg {
+  color: inherit !important;
+  margin-right: unset !important;
+  margin-top: unset !important;
+  padding: unset !important;
+  vertical-align: inherit !important;
+}
