increase contrast in `turns planned` comment.

--- a/packages/components/src/local/world-state/styles.module.scss
+++ b/packages/components/src/local/world-state/styles.module.scss
@@ -39,7 +39,7 @@
   width: 100%;
   line-height: 1.4;
   font-size: 10px;
-  color: #8c9ba5;
+  color: #000;
 }
 .item p:first-child {
   line-height: 1;
