--- a/packages/components/src/local/atoms/input-container/styles.module.scss
+++ b/packages/components/src/local/atoms/input-container/styles.module.scss
@@ -11,3 +11,19 @@
 .disable-offset {
   padding: 0;
 }
+
+.fullwidth {
+  width: 100%;
+}
+
+.private-input {
+  &__label {
+    display: flex;
+    align-items: center;
+
+    svg {
+      display: inline-block;
+      margin-right: 6px;
+    }
+  }
+}
