Pass relevant details to Turn Progression marker, display warning if game not initiated.

--- a/packages/components/src/local/molecules/turn-progression/styles.module.scss
+++ b/packages/components/src/local/molecules/turn-progression/styles.module.scss
@@ -92,4 +92,10 @@
     display: block;
     font-size: 14px;
   }
+
+  .not-initiated {
+    color: #f00;
+    background-color: #eee;
+    padding: 0 3px;
+  }
 }
