successfully binning cells

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -1,6 +1,6 @@
 .default-hex {
   fill: transparent;
-  stroke: #fff;
+  stroke: #f00;
   opacity: 0.6;
   stroke-width: 2;
 }
@@ -34,7 +34,7 @@
 }
 
 .default-coords {
-  color: #444;
+  color: #4f4;
   line-height: 20px;
   opacity: 0.8;
   text-align: center;
