--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -34,8 +34,9 @@
 }
 
 .default-coords {
-  color: #4f4;
+  color: #333;
   line-height: 20px;
+  font-size: 22px;
   opacity: 0.8;
   text-align: center;
 }
