need to fill cells according to type

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -1,6 +1,7 @@
 .default-hex {
-  fill: transparent;
-  stroke: #f00;
+  fill-opacity: 0.2;
+//  fill: transparent;
+  stroke: #fff;
   opacity: 0.6;
   stroke-width: 2;
 }
