Added chat entry component story

--- a/packages/components/src/local/form-elements/private-chat-input-toggle/styles.module.scss
+++ b/packages/components/src/local/form-elements/private-chat-input-toggle/styles.module.scss
@@ -8,8 +8,20 @@
   }
 
   .label-private {
+    @include typo-primary;
     color: #fff;
     font-size: 13px;
     font-weight: 600;
+  }
+}
+
+.wrap-detail {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+
+  &.wrap-detail-opened {
+    max-height: 90px;
+    transition: max-height 0.3s  ease-in;
   }
 }
