--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -1,7 +1,7 @@
 .default-hex {
-  fill-opacity: 0.2;
-  //  fill: transparent;
-  stroke: #fff;
+  // fill-opacity: 0.2;
+  fill: transparent;
+  stroke: #aaa;
   opacity: 0.6;
   stroke-width: 2;
 }
