--- a/packages/components/src/local/helper-elements/collapsible/header/styles.module.scss
+++ b/packages/components/src/local/helper-elements/collapsible/header/styles.module.scss
@@ -1,5 +1,5 @@
 $size: 16px;
-$channelIconSize: 20px;
+$channel-icon-size: 20px;
 
 .main {
   padding-left: $size + 4;
@@ -32,11 +32,11 @@ $channelIconSize: 20px;
 
 .control-channel {
   top: 0;
-  width: $channelIconSize;
-  height: $channelIconSize;
-  line-height: $channelIconSize;
+  width: $channel-icon-size;
+  height: $channel-icon-size;
+  line-height: $channel-icon-size;
   margin-top: 0;
-  border-width: 0px;
+  border-width: 0;
   display: block;
 }
 
