--- a/packages/components/src/local/molecules/channel-rfi-message-detail/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-rfi-message-detail/styles.module.scss
@@ -12,9 +12,16 @@
   padding-top: 10px;
 }
 
+.inset {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: #54667C;
+}
+
 .assigned {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: flex-end;
   margin-bottom: 5px;
 }
