--- a/packages/components/src/local/molecules/channel-rfi-message-detail/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-rfi-message-detail/styles.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  background-color: #54667C;
+  background-color: #54667c;
 }
 
 .assigned {
