Improve route planning highlighting

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -8,16 +8,16 @@
 
 .allowable-hex {
   fill-opacity: 0.2;
-  stroke: #fff;
+  stroke: #444;
   opacity: 0.4;
   stroke-width: 2;
 }
 
 .planned-hex {
   fill-opacity: 0.4;
-  stroke: #fff;
+  stroke: #111;
   opacity: 1;
-  stroke-width: 3;
+  stroke-width: 2;
 }
 
 .selected-hex {
