--- a/packages/components/src/local/organisms/chat-messages-list/styles.module.scss
+++ b/packages/components/src/local/organisms/chat-messages-list/styles.module.scss
@@ -6,3 +6,15 @@
   overflow-x: hidden;
   flex-grow: 2;
 }
+
+.turn-marker {
+  @include typo-primary;
+  color: rgba(255, 255, 255, 0.3);
+  display: block;
+  font-size: 12px;
+  font-weight: 600;
+  padding-right: 10px;
+  padding-top: 4px;
+  text-align: right;
+  width: 100%;
+}
