Remove height param for text-area - they were being shown as too tall

--- a/packages/themes/_input.scss
+++ b/packages/themes/_input.scss
@@ -5,7 +5,7 @@
 }
 
 textarea {
-  height: 200px;
+  /* height: 200px; */ // removed, so text-areas suit available space
   resize: none;
   width: 100%;
 }
