Fix chat entry form and make chat message list container height dyanamic

--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -560,6 +560,12 @@
   position: absolute;
   width: 100%;
 
+  .chat-message-container {
+    background: $background-action-head;
+    border-radius: 4px 4px 0 0;
+    padding: 8px 8px 22px;
+  }
+
   .Collapsible {
     background: $background-action-head;
     border-radius: 4px 4px 0 0;
