Refactor RFI status board detail wrapper

--- a/packages/components/src/local/rfi-status-board/styles.module.scss
+++ b/packages/components/src/local/rfi-status-board/styles.module.scss
@@ -1,3 +1,6 @@
-.example {
-  font-weight: bold;
+@import "~@serge/themes/dependencies/variables";
+
+.rfiForm {
+  background-color: $background-action-head;
+  padding: 10px;
 }
