--- a/packages/components/src/local/rfi-status-board/styles.module.scss
+++ b/packages/components/src/local/rfi-status-board/styles.module.scss
@@ -1,6 +1,6 @@
 @import "~@serge/themes/dependencies/variables";
 
-.rfiForm {
+.rfi-form {
   background-color: $background-action-head;
   padding: 10px;
 }
