--- a/packages/components/src/local/organisms/setting-forces/styles.module.scss
+++ b/packages/components/src/local/organisms/setting-forces/styles.module.scss
@@ -1,3 +1,7 @@
+.mb_20 {
+  margin-bottom: 20px;
+}
+
 .row {
   display: flex;
   width: 100%;
@@ -84,4 +88,162 @@
 
 .title-center {
   text-align: center;
+}
+
+// Accordion styles
+.accordion {
+  margin-bottom: 20px;
+}
+.accordion-header {
+  background-color: #8595a5!important,
+}
+.accordion-title {
+  color: #fff;
+}
+.arrow-icon {
+  color: #fff;
+}
+
+.icons-col {
+  background-color: #d9d9d9;
+  padding: 10px 20px;
+  height: 418px;
+  overflow-y: auto;
+}
+.icons-col::-webkit-scrollbar {
+    width: 7px;
+}
+.icons-col::-webkit-scrollbar-thumb {
+  background-color: #c4c4c4;
+  border-radius: 4px;
+}
+.icons-col > div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.icons-col p {
+  width: 100%;
+  margin-top: 0;
+  color: #838383;
+  font-size: 14px;
+  text-align: center;
+}
+
+.player-checkbox-label {
+  font-size: 12px !important;
+}
+
+.icon-item-main {
+  width: 45%;
+  margin-bottom: 15px;
+}
+.icon-box-holder {
+  position: relative;
+  padding-top: 100%;
+}
+.icon-box-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 555px;
+}
+.icon-box:hover {
+  cursor: move;
+}
+
+.list-title {
+  display: block;
+  color: #b1b1b1;
+  font-weight: bold;
+  width: 90px;
+}
+.assets-list-scrollable-box {
+  height: 418px;
+  overflow-y: auto;
+}
+.assets-list-scrollable-box ul {
+  padding-top: 0;
+  min-height: 98%;
+}
+.assets-list-scrollable-box ul > div {
+  min-height: 400px;
+}
+
+.assets-list-scrollable-box::-webkit-scrollbar {
+    width: 7px;
+}
+.assets-list-scrollable-box::-webkit-scrollbar-thumb {
+  background-color: #c4c4c4;
+  border-radius: 4px;
+}
+
+.assets-list-box p {
+  color: #1d3a4c;
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+.list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+
+}
+.asset-name {
+  flex: 1;
+  margin-left: 10px;
+}
+
+.list-item:hover {
+  cursor: pointer;
+  background: #f1f1f1;
+}
+
+.list-item-selected {
+  background-color: #1c3a4c;
+  color: #fff;
+}
+.list-item-selected:hover {
+  background-color: #1c3a4c;
+  color: #fff;
+}
+
+.item-icon {
+  width: 70%;
+  height: 70%;
+  filter: invert(100%);
+  border-width: 0;
+  -webkit-filter: invert(100%);
+}
+
+.item-asset-icon {
+  width: 36px;
+  height: 36px;
+  position: static;
+  border-width: 0;
+}
+
+.view-result-box {
+  height: 97%;
+  padding-top: 20px;
+  border-left: 1px solid #94a1aa;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
