--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -26,6 +26,21 @@
   stroke-width: 4;
 }
 
+.polygon-area {
+  fill-opacity: 0.4;
+  stroke: #111;
+  opacity: 1;
+  stroke-width: 5;
+}
+
+.polygon-area-2 {
+  fill-opacity: 0.4;
+  color: #0f0;
+  stroke: #f00;
+  opacity: 1;
+  stroke-width: 5;
+}
+
 .planned-line {
   stroke-width: 4;
 }
