Don't shade cells, the polygons handle the shading

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -1,13 +1,14 @@
 .default-hex {
-  fill-opacity: 0.2;
-  //fill: transparent;
+  //fill-opacity: 0.2;
+  fill: transparent;
   stroke: #aaa;
   opacity: 0.6;
   stroke-width: 2;
 }
 
 .allowable-hex {
-  fill-opacity: 0.2;
+  fill: transparent;
+  //fill-opacity: 0.2;
   stroke: #444;
   opacity: 0.4;
   stroke-width: 2;
