--- a/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
+++ b/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
@@ -15,6 +15,7 @@
 .icons-col {
   background-color: #d9d9d9;
   padding: 10px 20px;
+  margin-top: 10px;
   height: 418px;
   overflow-y: auto;
 }
@@ -38,11 +39,6 @@
   font-size: 14px;
   text-align: center;
   font-family: sans-serif;
-}
-
-.player-checkbox-label {
-  font-size: 12px !important;
-  font-weight: bold !important;
 }
 
 .icon-item-main {
@@ -104,11 +100,15 @@
   border-radius: 4px;
 }
 
+.assets-list-box {
+  margin-top: 10px;
+}
 .assets-list-box p {
   color: #1d3a4c;
   text-align: center;
   font-size: 14px;
   font-weight: bold;
+  margin-top: 0;
   margin-bottom: 13px;
   font-family: sans-serif;
 }
