--- a/packages/components/src/local/form-elements/speed/styles.module.scss
+++ b/packages/components/src/local/form-elements/speed/styles.module.scss
@@ -33,6 +33,14 @@
   bottom: -16px;
   width: 6px;
   position: absolute;
+
+  &__label {
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: -18px;
+    font-size: 12px;
+  }
 }
 .speed-active {
   background-color: #9ea9b1;
