work on location select

--- a/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
+++ b/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
@@ -80,6 +80,9 @@
   color: #434343;
   font-weight: bold;
 }
+.list-dynamic-input > div {
+  width: 100%;
+}
 .assets-list-scrollable-box {
   height: 418px;
   overflow-y: auto;
