add confirmation dialog

--- a/packages/components/src/local/world-state/styles.module.scss
+++ b/packages/components/src/local/world-state/styles.module.scss
@@ -79,3 +79,9 @@
   margin-bottom: 8px;
   text-align: center;
 }
+
+.action {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+}
