--- a/packages/components/src/local/molecules/sortable-list/styles.module.scss
+++ b/packages/components/src/local/molecules/sortable-list/styles.module.scss
@@ -94,7 +94,8 @@
   color: #434343;
 }
 
-.section > input, .section > div {
+.section > input,
+.section > div {
   flex: 1;
   font-family: inherit;
   font-size: 18px;
