fix checkbox tick styling on adjudicate-turn-form

--- a/packages/components/src/local/adjudicate-turn-form/styles.module.scss
+++ b/packages/components/src/local/adjudicate-turn-form/styles.module.scss
@@ -14,4 +14,15 @@
   button + button {
     margin-left: 1rem;
   }
+
+  .fieldset {
+    border: transparent;
+  
+    input,
+    label,
+    div,
+    svg {
+      color: #fff !important;
+    }
+  }
 }
