fix custom style files in components changes does not recompiled

--- a/packages/components/src/local/atoms/input-container/styles.module.scss
+++ b/packages/components/src/local/atoms/input-container/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 .input-container {
   padding-bottom: 0.5rem;
   .input-label {
