--- a/packages/components/src/local/molecules/chat-message/styles.module.scss
+++ b/packages/components/src/local/molecules/chat-message/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .chat-message-wrapper {
   @include typo-primary;
