--- a/packages/components/src/local/atoms/search-list-row/styles.module.scss
+++ b/packages/components/src/local/atoms/search-list-row/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .searchlist {
   &-row {
