--- a/packages/components/src/local/form-elements/private-chat-input-toggle/styles.module.scss
+++ b/packages/components/src/local/form-elements/private-chat-input-toggle/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .private-badge-wrapper {
   cursor: pointer;
