--- a/packages/components/src/local/molecules/channel-message-header/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-message-header/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 @mixin panel-item-wrap($radius) {
   background-color: $background-alpha-primary;
