--- a/packages/components/src/local/molecules/channel-rfi-message-detail/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-rfi-message-detail/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .main {
   @include typo-primary;
