--- a/packages/components/src/local/molecules/forces-in-channel/styles.module.scss
+++ b/packages/components/src/local/molecules/forces-in-channel/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .forces-in-channel {
   align-items: center;
