--- a/packages/components/src/local/molecules/insight-form/styles.module.scss
+++ b/packages/components/src/local/molecules/insight-form/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .insight-form {
   @include typo-primary;
