--- a/packages/components/src/local/organisms/admin-login/styles.module.scss
+++ b/packages/components/src/local/organisms/admin-login/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .login-form-head {
   @include typo-primary;
