--- a/packages/components/src/local/perception-form/styles.module.scss
+++ b/packages/components/src/local/perception-form/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .fieldset {
   border: transparent;
