come up with per-force colors, use in wargame

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -28,6 +28,22 @@
   background-color: #ff0b00;
 }
 
+.blue-1 {
+  background-color: #00aaff;
+}
+
+.red-1 {
+  background-color: #ff0b60;
+}
+
+.blue-2 {
+  background-color: #00008f;
+}
+
+.red-2 {
+  background-color: #ff4b60;
+}
+
 .green {
   background-color: #19bd37;
 }
