introduce new counters (CV)

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -59,7 +59,7 @@
   z-index: 999;
 }
 
-$platforms: frigate, destroyer, mcmv, unknown, agi, fast-attack-craft,
+$platforms: frigate, destroyer, mcmv, unknown, cv, agi, fast-attack-craft,
   unmanned-airborne-vehicle, merchant-vessel, fixed-wing-aircraft,
   fishing-vessel, missile, helicopter, boghammer, coastal-radar-site, datum,
   torpedo, pirate, mine, task-group;
