--- a/packages/components/src/local/perception-form/styles.module.scss
+++ b/packages/components/src/local/perception-form/styles.module.scss
@@ -90,7 +90,7 @@
   background-color: #19bd37;
 }
 
-$platforms: frigate, destroyer, mcmv, unknown, agi, fast-attack-craft, uas,
+$platforms: frigate, destroyer, mcmv, cv, unknown, agi, fast-attack-craft, uas,
   merchant-vessel, fixed-wing-aircraft, fishing-vessel, missile, helicopter,
   boghammer, coastal-radar-site, datum, torpedo, pirate, mine;
 
