make red shades more difficult

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -33,7 +33,7 @@
 }
 
 .red-1 {
-  background-color: #ff0b60;
+  background-color: #ff0000;
 }
 
 .blue-2 {
@@ -41,7 +41,7 @@
 }
 
 .red-2 {
-  background-color: #ff4b60;
+  background-color: #ff7b7b;
 }
 
 .green {
