--- a/packages/components/src/local/molecules/admin-message/styles.module.scss
+++ b/packages/components/src/local/molecules/admin-message/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .info-wrap {
   overflow: hidden;
