--- a/packages/components/src/local/organisms/chat-messages-list/styles.module.scss
+++ b/packages/components/src/local/organisms/chat-messages-list/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .messages-list {
   height: calc(100vh - 280px);
