--- a/packages/components/src/local/progress-indicator/styles.module.scss
+++ b/packages/components/src/local/progress-indicator/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 $indicator-size: 20px;
 $indicator-margin: 15px;
