--- a/packages/components/src/local/adjudicate-turn-form/styles.module.scss
+++ b/packages/components/src/local/adjudicate-turn-form/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .adjudicate {
   padding: 10px;
