--- a/packages/components/src/local/form-header/styles.module.scss
+++ b/packages/components/src/local/form-header/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .form-header {
   @include typo-primary;
