--- a/packages/components/src/local/molecules/admin-message-creator/styles.module.scss
+++ b/packages/components/src/local/molecules/admin-message-creator/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .btn-send {
   border-radius: 50% !important;
