--- a/packages/components/src/local/molecules/channel-rfi-message/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-rfi-message/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .message-list-wrapper {
   @include typo-primary;
