--- a/packages/components/src/local/molecules/force-objective/styles.module.scss
+++ b/packages/components/src/local/molecules/force-objective/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .force-objectives {
   @include typo-primary;
