--- a/packages/components/src/local/organisms/channel-rfi-messages-list/styles.module.scss
+++ b/packages/components/src/local/organisms/channel-rfi-messages-list/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .messages-list {
   max-height: calc(100vh - 165px);
