--- a/packages/components/src/local/organisms/wargame-list/styles.module.scss
+++ b/packages/components/src/local/organisms/wargame-list/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 
 .wargame-searchlist {
   height: 100%;
