the functionality of the form is pre-finished

--- a/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
+++ b/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
@@ -176,12 +176,12 @@
   justify-content: flex-start;
 }
 
-.age-select {
+.location-select {
   font-size: 14px !important;
   color: #434343 !important;
   font-weight: bold !important;
 }
 
-.age-select select:focus {
+.location-select select:focus {
   background-color: transparent !important;
 }
