--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -8,6 +8,7 @@
   &.selected {
     border: 4px solid rgba(255, 255, 255, 0.7);
     box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 10%;
   }
   &.destroyed {
     border-radius: 20%;
