--- a/packages/components/src/local/molecules/turn-progression/styles.module.scss
+++ b/packages/components/src/local/molecules/turn-progression/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../themes/dependencies/variables";
 
 .flex-content-wrapper {
   @include typo-primary;
