--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -60,10 +60,9 @@
   z-index: 999;
 }
 
-$platforms: frigate, destroyer, mcmv, unknown, cv, agi, fast-attack-craft,
-  unmanned-airborne-vehicle, merchant-vessel, fixed-wing-aircraft,
-  fishing-vessel, missile, helicopter, boghammer, coastal-radar-site, datum,
-  torpedo, pirate, mine, task-group;
+$platforms: agi, boghammer, carrier, coastal-radar-site, datum, destroyer, fast-attack-craft, 
+fishing-vessel, fixed-wing-aircraft, frigate, frigate-ta, helicopter, mcmv, merchant-vessel, mine, missile, mpa,
+pirate, ssk, ssn, task-group, torpedo, unknown, unmanned-airborne-vehicle;
 
 @each $platform in $platforms {
   .platform-type-#{$platform} {
