--- a/packages/components/src/local/perception-form/styles.module.scss
+++ b/packages/components/src/local/perception-form/styles.module.scss
@@ -90,9 +90,10 @@
   background-color: #19bd37;
 }
 
-$platforms: agi, boghammer, carrier, coastal-radar-site, datum, destroyer, fast-attack-craft, 
-fishing-vessel, fixed-wing-aircraft, frigate, frigate-ta, helicopter, mcmv, merchant-vessel, mine, missile, mpa,
-pirate, ssk, ssn, task-group, torpedo, unknown, unmanned-airborne-vehicle;
+$platforms: agi, boghammer, carrier, coastal-radar-site, datum, destroyer,
+  fast-attack-craft, fishing-vessel, fixed-wing-aircraft, frigate, frigate-ta,
+  helicopter, mcmv, merchant-vessel, mine, missile, mpa, pirate, ssk, ssn,
+  task-group, torpedo, unknown, unmanned-airborne-vehicle;
 
 @each $platform in $platforms {
   .platform-type-#{$platform} {
