--- a/packages/components/src/local/molecules/force-objective/styles.module.scss
+++ b/packages/components/src/local/molecules/force-objective/styles.module.scss
@@ -12,8 +12,7 @@
   padding: 14px;
   right: 0;
   bottom: 0;
-  z-index: 1000;
-  position: absolute;
+  position: fixed;
   color: #fff;
 
   .objective-text {
