--- a/packages/themes/App.scss
+++ b/packages/themes/App.scss
@@ -54,6 +54,13 @@
   }
 }
 
+.heartbeat-checker-container {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+}
+
 .loading {
   display: flex;
   flex-direction: column;
