--- a/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
+++ b/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
@@ -1,9 +1,9 @@
 .heartbeat-status-icon {
   font-size: 20px;
-	color: #e00;
-  
+  color: #e00;
+
   &.start {
-    animation: beat 0.70s infinite alternate;
+    animation: beat 0.7s infinite alternate;
     transform-origin: center;
   }
 
@@ -13,6 +13,8 @@
   }
 }
 
-@keyframes beat{
-	to { transform: scale(1.3); }
+@keyframes beat {
+  to {
+    transform: scale(1.3);
+  }
 }
