slow down heartbeat, fade when off.

--- a/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
+++ b/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
@@ -3,13 +3,14 @@
   color: #e00;
 
   &.start {
-    animation: beat 0.7s infinite alternate;
+    animation: beat 0.8s infinite alternate;
     transform-origin: center;
   }
 
   &.stop {
     animation-play-state: paused;
     transform-origin: center;
+    color: #c99;
   }
 }
 
