--- a/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
+++ b/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
@@ -1,15 +1,19 @@
+@import "../../../../../themes/dependencies/variables";
+
 .heartbeat-status-icon {
   font-size: 20px;
-  color: #e00;
+  color: $red;
 
   &.start {
-    animation: beat 0.7s infinite alternate;
+    animation: beat 0.8s infinite alternate;
     transform-origin: center;
   }
 
   &.stop {
     animation-play-state: paused;
     transform-origin: center;
+    color: $grey;
+    transform: scale(1.3);
   }
 }
 
