Sortable list for platform types and recursive change handlers

--- a/packages/components/src/local/helper-elements/groups/styles.module.scss
+++ b/packages/components/src/local/helper-elements/groups/styles.module.scss
@@ -2,9 +2,12 @@
   position: relative;
 
   > ul {
-    list-style: none;
     z-index: 1;
     padding: 0;
+
+    li {
+      list-style-type: none;
+    }
   }
 
   > div {
