--- a/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
+++ b/packages/components/src/local/organisms/setting-forces/settings-force-platform-types/styles.module.scss
@@ -119,6 +119,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 5px 10px;
+  user-select: none;
 }
 .asset-name {
   flex: 1;
