--- a/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
+++ b/packages/components/src/local/atoms/heartbeat-checker/styles.module.scss
@@ -3,28 +3,27 @@
 .heartbeat-status-icon {
   font-size: 20px;
   color: $red;
-  animation: beat 0.8s infinite alternate;
-  animation-play-state: paused;
-
+  
   &.disabled {
     color: $grey;
-    transform: scale(1.3);
+    transform: scale(1);
   }
 
   &.start {
     color: $red;
-    animation-play-state: running;
+    animation: beat 0.8s 2 alternate;
     transform-origin: center;
   }
 
   &.stop {
     color: $red;
-    animation-play-state: paused;
-    transform-origin: center;
   }
 }
 
 @keyframes beat {
+  from {
+    transform: scale(1);
+  }
   to {
     transform: scale(1.3);
   }
