--- a/packages/components/src/local/molecules/channel-message-detail/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-message-detail/styles.module.scss
@@ -5,39 +5,7 @@
   border-radius: $radius;
 }
 
-.level-1 {
-  margin-left: 0;
-}
-
-.level-2 {
-  margin-left: 16px;
-}
-
-.level-3 {
-  margin-left: 16px;
-}
-
-.level-4 {
-  margin-left: 16px;
-}
-
-.level-5 {
-  margin-left: 16px;
-}
-
-.level-6 {
-  margin-left: 16px;
-}
-
-.level-7 {
-  margin-left: 16px;
-}
-
-.level-8 {
-  margin-left: 16px;
-}
-
-.level-9 {
+.level-margin {
   margin-left: 16px;
 }
 
