Add text for asset icons and autoinvert icon color based on background color

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -1,9 +1,26 @@
+.asset-icon-background {
+  position: relative;
+  border-radius: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.asset-icon-fw {
+  width: 100%;
+  height: 100%;
+}
+
+.asset-icon-invert {
+  filter: invert(100%);
+}
+
 .asset-icon {
   position: absolute;
   border-radius: 100%;
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: 80%;
+  box-sizing: border-box;
   border: 1px solid hsla(0, 0%, 100%, 0.6);
   &.selected {
     border: 4px solid rgba(255, 255, 255, 0.7);
