--- a/packages/components/src/local/molecules/search-list/styles.module.scss
+++ b/packages/components/src/local/molecules/search-list/styles.module.scss
@@ -9,8 +9,10 @@
     display: flex;
     flex-direction: column;
     flex-grow: 2;
-    height: 100%;
+    height: calc(100vh / 1.6);
+    min-height: 400px;
     max-height: calc(59vh - 153px);
-    overflow-y: scroll;
+    overflow-y: auto;
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.2);
   }
 }
